= Version descriptions

== master

- Avoid vibration when the sleep notification is created

== 7.0.4

- Much faster mass-import of sleeps from a previous export result

== 7.0.3

- Resolves: gh#41 ability to export events to your calendar (Ed George)

== 7.0.2

- Added PT-BR translation (fabianski7)
- Tested on Android 11
- Removed not needed custom fonts, now using default regular/bold fonts from the system
- Resolves: gh#33 main activity: don't delete entry by swiping on the rating bar
- Resolves: gh#29 ability to import events from your calendar (Ed George)

== 7.0.1

- Fix missing localization of the notification channel's name
- Updated appcompat, constraintlayout, material, junit and espress-core to latest versions

== 7.0.0

- Resolves: gh#28 it is now possible to rate sleeps
- Resolves: gh#7 expand/collapse FAB on scroll

== 6.4

- Resolves: gh#27 improve main activity FAB color in dark mode
- Added Spannish translation (Diego Sanguinetti)
- Resolves: gh#6 next to all-time stats, there are now "last 7 days" and "this year" stats as well
- Related: gh#1 Cannot import csv after export, improved fix for less mainstream Android flavors
  (Sebastian Zeller)

== 6.3

- Resolves: gh#21 daily average now detects completely skipped days
- Resolves: gh#20 sleep entries are now being sorted in chronological order (Sebastian Zeller)
- Resolves: gh#19 in the sleep edit time picker, use 24 or 12 hour view according to system settings
  (Sebastian Zeller)
- Resolves: gh#16 support dark mode (martiandolphin)

== 6.2

- Resolves: gh#15 export format is now better documented
- Resolves: gh#14 main view: sleep counter is now less confusing for multiple sleeps / day
- Resolves: gh#13 main view: scroll the content above the recycler view
- Resolves: gh#8 main view: the snackbar and the start/stop button doesn't overlap anymore

== 6.1

- Resolves: gh#11 use different colors for start and stop
- Much improved design (Sanju S)