@@ -6,10 +6,17 @@
 
 package hu.vmiklos.plees_tracker
 
+import android.content.Intent
 import android.os.Bundle
+import android.util.Log
+import androidx.activity.result.contract.ActivityResultContracts
 import androidx.appcompat.app.AppCompatActivity
 
 class PreferencesActivity : AppCompatActivity() {
+    companion object {
+        private const val TAG = "PreferencesActivity"
+    }
+
     override fun onCreate(savedInstanceState: Bundle?) {
         super.onCreate(savedInstanceState)
         supportFragmentManager
@@ -17,6 +24,33 @@ class PreferencesActivity : AppCompatActivity() {
             .replace(R.id.settings_container, Preferences())
             .commit()
         setContentView(R.layout.settings)
+        DataModel.preferencesActivity = this
+    }
+
+    override fun onDestroy() {
+        super.onDestroy()
+        DataModel.preferencesActivity = null
+    }
+
+    private val backupActivityResult =
+        registerForActivityResult(ActivityResultContracts.StartActivityForResult()) { result ->
+            try {
+                result.data?.data?.let { uri ->
+                    contentResolver.takePersistableUriPermission(
+                        uri, Intent.FLAG_GRANT_WRITE_URI_PERMISSION
+                    )
+                    val editor = DataModel.preferences.edit()
+                    editor.putString("auto_backup_path", uri.toString())
+                    editor.apply()
+                }
+            } catch (e: Exception) {
+                Log.e(TAG, "onActivityResult: setting backup path failed")
+            }
+        }
+
+    public fun openFolderChooser() {
+        val intent = Intent(Intent.ACTION_OPEN_DOCUMENT_TREE)
+        backupActivityResult.launch(intent)
     }
 }
 
